--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
-/* html, body {
+html, body {
+    font-family: 'Arimo', sans-serif;
+    font-weight: bolder; 
+}
 
-} */
+.nav-container {
+    display: flex; 
+}
+
+.nav-elements {
+    list-style-type: none;
+}
+
+.each-nav-element {
+    
+}
