--- a/src/components/BeyCards/BeyCards.css
+++ b/src/components/BeyCards/BeyCards.css
@@ -1,22 +1,22 @@
 .card {
-    background: #fff;
+    background: darkgrey;
     border-radius: 2px;
-    height: 325px;
+    height: 250px;
     margin: 1rem;
     position: relative;
-    width: 325px;
-    box-shadow: 0 3px 6px #999, 0 3px 6px #999;
-    text-align: left;
+    width: 250px;
+    box-shadow: 0 3px 6px #0D090A, 0 3px 6px #0D090A;
 }
   
 .card > .img-container {
-    height: 60%;
+    height: 100%;
     overflow: hidden;
     text-align: center;
-    background:#6CADDC;
+    background: fuchsia;
 }
 .card > .img-container > img {
-    width: 60%
+    width: 100%;
+    height: 100%; 
 }
   
 .card:hover {
