--- a/src/components/Wrapper/Wrapper.css
+++ b/src/components/Wrapper/Wrapper.css
@@ -1,6 +1,9 @@
 .wrapper {
-    padding-top: 50px;
-    background: #ECEFF1;
+    background: url('gold_bkgrnd.jpg') no-repeat center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     height: 100%;
     display: flex;
     flex-flow: row wrap;
