--- a/src/components/Wrapper/Wrapper.css
+++ b/src/components/Wrapper/Wrapper.css
@@ -11,4 +11,7 @@
     justify-content: space-around;
     align-content: flex-start;
     overflow: auto;
+    text-align: center; 
+    margin: 0; 
+    width: 100%; 
 }
