changed font and font-size; added main header

--- a/src/components/Wrapper/Wrapper.css
+++ b/src/components/Wrapper/Wrapper.css
@@ -8,10 +8,8 @@
     display: flex;
     flex-flow: row wrap;
     padding: 20px;
-    justify-content: space-around;
+    justify-content: space-between;
     align-content: flex-start;
     overflow: auto;
     text-align: center; 
-    margin: 0; 
-    width: 100%; 
 }
