--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,20 @@
 html, body {
-    font-family: 'Arimo', sans-serif;
+    font-family: 'Abril Fatface', cursive;
     font-weight: bolder; 
     text-align: center; 
     width: 100%; 
     margin: 0; 
 }
 
+.main-header {
+    margin: 0 auto; 
+    margin-top: 10px; 
+}
+
 .nav-container {
     display: inline-flex; 
     flex-direction: row;  
-    background: rgba(230, 150, 32, 0.7);
+    background: rgba(215, 150, 32, 0.7);
     width: 100%;
     border-bottom: 1px solid black; 
     margin-top: -25px; 
@@ -22,11 +27,13 @@ html, body {
 
 .each-nav-element {
     display: inline-flex; 
-    padding: 50px; 
+    padding: 25px; 
+    font-size: 20px; 
 }
 
 .footer-container {
-
+    display: block; 
+    margin: 0 auto; 
 }
 
 .footer-content {
