--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,8 @@ html, body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    color: #DB9B00;
+    text-shadow: 1px 1px #0D090A;
 }
 
 .main-header {
@@ -20,7 +22,7 @@ html, body {
     display: inline-flex; 
     flex-direction: row;  
     justify-content: space-around; 
-    background: rgba(215, 150, 32, 0.6);
+    background: rgba(61, 12, 17, 0.5);
     width: 100%;
     border-bottom: 1px solid black; 
     height: 125px;
@@ -42,13 +44,9 @@ html, body {
     background-color: black; 
 }
 
-.footer-content {
-    color: goldenrod; 
-}
-
 a {
     text-decoration: none; 
-    color: goldenrod; 
+    color: #DB9B00;
 }
 
 a:hover {
